dashboard: fixed the 12NC field hotkey not being visible.

--- a/frontend/app/dashboard/assets/input.css
+++ b/frontend/app/dashboard/assets/input.css
@@ -87,6 +87,7 @@
 .dashboard-input kbd.is-inside {
   bottom: 1px;
   right: 1px;
+  z-index: 2;
 }
 .dashboard-input-buttons kbd.is-inside {
   bottom: 0;
